--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,28 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # State Management (if needed, choose one)
+  provider: ^6.0.0  # Example, you can choose another state management solution
+
+  # Local Database
+  hive: ^2.0.0
+  hive_flutter: ^1.1.0
+
+  # File Picker
+  file_picker: ^5.0.0
+
+  # Local Notifications
+  flutter_local_notifications: ^9.0.0
+
+  # For icons and other material design components
+  flutter_svg: ^2.0.0  # Optional, if you plan to use SVG icons
+
+  path_provider: ^2.0.9
+
+  # HTTP requests (if you plan to connect to a backend API)
+  http: ^0.13.4  # Optional
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +62,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   ffi: ^2.0.1
+  hive_generator: ^1.1.0
+  build_runner: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
