--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,9 +61,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  ffi: ^2.0.1
+  hive: ^2.0.5
+  hive_flutter: ^1.1.0
+  crypto: ^3.0.1
+  contacts_service: ^0.6.3
+  permission_handler: ^10.2.0
   hive_generator: ^1.1.0
-  build_runner: ^2.0.0
+  build_runner: ^2.1.11
+  # flutter_secure_storage: ^5.0.2
+  # path_provider: ^2.0.10
+  ffi: ^2.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
