rewrite the project, auth works and pass to Home

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dev_dependencies:
   permission_handler: ^10.2.0
   hive_generator: ^1.1.0
   build_runner: ^2.1.11
+  uuid: ^3.0.6
   # flutter_secure_storage: ^5.0.2
   # path_provider: ^2.0.10
   ffi: ^2.0.1
