--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   # HTTP requests (if you plan to connect to a backend API)
   http: ^0.13.4  # Optional
 
+  receive_sharing_intent: ^1.8.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,17 +62,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive: ^2.0.5
-  hive_flutter: ^1.1.0
   crypto: ^3.0.1
   contacts_service: ^0.6.3
   permission_handler: ^10.2.0
   hive_generator: ^1.1.0
   build_runner: ^2.1.11
   uuid: ^3.0.6
-  # flutter_secure_storage: ^5.0.2
-  # path_provider: ^2.0.10
+  share_plus: ^6.3.2  # Use the latest version available
   ffi: ^2.0.1
+  open_filex: ^4.5.0
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
