--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  crypto: ^3.0.1
+  # crypto: ^3.0.1
   contacts_service: ^0.6.3
   permission_handler: ^10.2.0
   hive_generator: ^1.1.0
@@ -70,7 +70,15 @@ dev_dependencies:
   uuid: ^3.0.6
   share_plus: ^6.3.2  # Use the latest version available
   ffi: ^2.0.1
-  open_filex: ^4.5.0
+  # open_filex: ^4.5.0
+  flutter_launcher_icons: ^0.9.2
+
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/icon.png"  # path to your app icon
   
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -92,9 +100,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
