basic integration with firebase

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google() // Ensure this is present
+        mavenCentral() // Ensure this is present
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.0.2'
+        classpath 'com.google.gms:google-services:4.3.14'
+    }
+}
+
 allprojects {
     repositories {
         google()
