--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
+    id "com.google.gms.google-services" // Firebase plugin
 }
 
 def localProperties = new Properties()
@@ -34,20 +35,15 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.klidok.cypheron"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion = 21       // Set your desired minimum SDK version here
-        targetSdkVersion = 33    // Set your target SDK version here
+        minSdkVersion = 23 // Updated to meet Firebase requirements
+        targetSdkVersion = 33
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
     }
@@ -56,3 +52,6 @@ android {
 flutter {
     source = "../.."
 }
+
+// Apply the Google Services plugin at the end
+apply plugin: 'com.google.gms.google-services'
