--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
 
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.4 # For Authentication
+  cloud_firestore: ^5.6.0 # For Firestore (Database)
+  firebase_storage: ^12.3.7 # For Storage
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
