--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
 
   firebase_core: ^3.9.0
   firebase_auth: ^5.3.4 # For Authentication
+  google_sign_in: ^6.2.0
   cloud_firestore: ^5.6.0 # For Firestore (Database)
   firebase_storage: ^12.3.7 # For Storage
 
@@ -106,6 +107,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/icon.png
+    - assets/icons/google_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
