--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
 
   receive_sharing_intent: ^1.8.1
 
+  shared_preferences: ^2.1.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -108,6 +110,7 @@ flutter:
   assets:
     - assets/icons/icon.png
     - assets/icons/google_icon.png
+    - assets/license_agreement.txt
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
