--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:label="cypheron"
+        android:label="Cypheron"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
