--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,5 @@
 buildscript {
+    ext.kotlin_version = '1.8.22' 
     repositories {
         google() // Ensure this is present
         mavenCentral() // Ensure this is present
