--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.1.9+13
 
 environment:
   sdk: '>=3.4.0 <4.0.0'
@@ -79,6 +79,7 @@ dev_dependencies:
   share_plus: ^6.3.2  # Use the latest version available
   ffi: ^2.0.1
   flutter_launcher_icons: ^0.9.2
+  firebase_crashlytics: ^4.3.4
 
 
 
